--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -54,9 +54,18 @@ runs:
       run: |
         "${{ github.action_path }}" >> $Env:GITHUB_PATH
         (Resolve-Path "${{ github.action_path }}/../../../Scripts").Path >> $Env:GITHUB_PATH
+    
+    # If the configuration path doesn't exist in the workspace, then it means that the workspace repository doesn't have
+    # its own spell-checking configuration. In that case we don't need to copy anything, because the configuration files
+    # will be used implicitly according to the value of default-configuration-repository.
+    - name: Check configuration path
+      id: check-configuration-path
+      shell: pwsh
+      run: |
+        Set-GitHubOutput -Key 'configuration-path-exists' -Value (Test-Path (Join-Path "$Env:GITHUB_WORKSPACE" '${{ inputs.configuration-path }}'))
 
     - name: Merge "excludes.txt"
-      if: inputs.merge-file-excludes == 'true'
+      if: inputs.merge-file-excludes == 'true' && ${{ steps.check-configuration-path.outputs.configuration-path-exists }} == 'true'
       shell: pwsh
       run: |
         $mergeParameters = @{
@@ -67,7 +76,7 @@ runs:
         Merge-SpellCheckingDictionaryFile @mergeParameters
 
     - name: Merge "line_forbidden.patterns"
-      if: inputs.merge-forbidden-patterns == 'true'
+      if: inputs.merge-forbidden-patterns == 'true' && ${{ steps.check-configuration-path.outputs.configuration-path-exists }} == 'true'
       shell: pwsh
       run: |
         $mergeParameters = @{
@@ -78,7 +87,7 @@ runs:
         Merge-SpellCheckingDictionaryFile @mergeParameters
 
     - name: Merge "patterns.txt"
-      if: inputs.merge-ignore-patterns == 'true'
+      if: inputs.merge-ignore-patterns == 'true' && ${{ steps.check-configuration-path.outputs.configuration-path-exists }} == 'true'
       shell: pwsh
       run: |
         $mergeParameters = @{
