--- a/.github/workflows/post-pull-request-checks-automation.yml
+++ b/.github/workflows/post-pull-request-checks-automation.yml
@@ -42,7 +42,7 @@ on:
         required: false
         type: number
         default: 1
-        description: Configuration for the timeout-minutes parameter of the workflow. The 360 is GitHub's default.
+        description: Configuration for the timeout-minutes parameter of the workflow.
 
 jobs:
   post-pull-request-checks-automation:
@@ -58,14 +58,14 @@ jobs:
           "MERGE_TOKEN=$mergeToken" >> $Env:GITHUB_ENV
 
       - name: Automatically Merge Pull Request
-        uses: Lombiq/GitHub-Actions/.github/actions/auto-merge-pull-request@issue/OSOE-562
+        uses: Lombiq/GitHub-Actions/.github/actions/auto-merge-pull-request@dev
         env:
           GITHUB_TOKEN: ${{ env.MERGE_TOKEN }}
         with:
           merge-method: ${{ inputs.merge-method }}
 
       - name: Automatically Resolve or Done Jira issue
-        uses: Lombiq/GitHub-Actions/.github/actions/auto-resolve-done-jira-issue@issue/OSOE-562
+        uses: Lombiq/GitHub-Actions/.github/actions/auto-resolve-done-jira-issue@dev
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
