--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -82,7 +82,7 @@ jobs:
 
       - name: Check Spelling
         id: check-spelling-action
-        uses: Lombiq/GitHub-Actions/.github/actions/spelling@issue/OSOE-525
+        uses: Lombiq/GitHub-Actions/.github/actions/spelling@dev
         with:
           dictionary-source-prefixes: ${{ inputs.dictionary-source-prefixes }}
           extra-dictionaries: ${{ inputs.extra-dictionaries }}
@@ -104,7 +104,7 @@ jobs:
     if: always() && needs.check-spelling.outputs.followup && github.event_name == 'pull_request'
     steps:
       - name: Comment (PR)
-        uses: Lombiq/GitHub-Actions/.github/actions/spelling@issue/OSOE-525
+        uses: Lombiq/GitHub-Actions/.github/actions/spelling@dev
         with:
           post-comment: 1
           task: ${{ needs.check-spelling.outputs.followup }}
