--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -163,3 +163,31 @@ runs:
         spell_check_this: ${{ inputs.default-configuration-repository }}
         suppress_push_for_open_pull_request: 1
         task: ${{ inputs.task }}
+        check_extra_dictionaries: |
+          cspell:aws/aws.txt
+          cspell:companies/src/companies.txt
+          cspell:cryptocurrencies/cryptocurrencies.txt
+          cspell:csharp/csharp.txt
+          cspell:css/css.txt
+          cspell:docker/src/docker-words.txt
+          cspell:dotnet/dotnet.txt
+          cspell:filetypes/filetypes.txt
+          cspell:fonts/fonts.txt
+          cspell:fullstack/fullstack.txt
+          cspell:html/html.txt
+          cspell:lorem-ipsum/dictionary.txt
+          cspell:node/additional_words.txt
+          cspell:node/node.txt
+          cspell:npm/npm.txt
+          cspell:powershell/powershell.txt
+          cspell:public-licenses/src/generated/public-licenses.txt
+          cspell:software-terms/src/network-os.txt
+          cspell:software-terms/src/network-protocols.txt
+          cspell:software-terms/src/software-terms.txt
+          cspell:software-terms/src/software-tools.txt
+          cspell:sql/src/sql.txt
+          cspell:sql/src/tsql.txt
+          cspell:typescript/typescript.txt
+          lombiq-lgha:dictionaries/Liquid.txt
+          lombiq-lgha:dictionaries/Lombiq.common.txt
+          lombiq-lgha:dictionaries/Lombiq.people.txt
