--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -44,7 +44,7 @@ inputs:
       Repository with default configuration to use when the workspace repository doesn't have its own configuration. The
       default from Check Spelling is ''.
     required: false
-    default: Lombiq/GitHub-Actions@issue/OSOE-523
+    default: Lombiq/GitHub-Actions@dev
   post-comment:
     description: Flag for if check-spelling should post comment, the default is 1.
     required: false
@@ -125,7 +125,7 @@ runs:
       shell: pwsh
       run: |
         $defaultPrefixes = @{
-          'lombiq-lgha' = 'https://raw.githubusercontent.com/Lombiq/GitHub-Actions/issue/OSOE-523/.github/actions/spelling/'
+          'lombiq-lgha' = 'https://raw.githubusercontent.com/Lombiq/GitHub-Actions/dev/.github/actions/spelling/'
           'cspell' = 'https://raw.githubusercontent.com/check-spelling/cspell-dicts/v20220816/dictionaries/'
         }
 
