--- a/.github/workflows/build-and-test-orchard-core.yml
+++ b/.github/workflows/build-and-test-orchard-core.yml
@@ -29,6 +29,12 @@ on:
         type: string
         default: 6.0.x
         description: Version of the .NET SDK to set up.
+      blame-hang-timeout:
+        required: false
+        default: ""
+        description: >
+        Run the tests in blame mode and collects a hang dump when a test exceeds the given timeout. See
+        https://learn.microsoft.com/en-us/dotnet/core/tools/dotnet-test for details on available values.
       build-directory:
         required: false
         type: string
@@ -218,8 +224,9 @@ jobs:
 
       - name: Tests
         if: inputs.test-disable == 'false'
-        uses: Lombiq/GitHub-Actions/.github/actions/test-dotnet@dev
+        uses: Lombiq/GitHub-Actions/.github/actions/test-dotnet@issue/OSOE-464-blame-hang
         with:
+          blame-hang-timeout: ${{ inputs.blame-hang-timeout }}
           build-directory: ${{ inputs.build-directory }}
           solution-path: ${{ inputs.build-solution-path }}
           test-verbosity: ${{ inputs.build-verbosity }}
