--- a/.github/actions/test-dotnet/action.yml
+++ b/.github/actions/test-dotnet/action.yml
@@ -118,13 +118,13 @@ runs:
 
     - name: Merge BlameHangDumps
       shell: pwsh
-      if: failure() && steps.run-tests.outputs.test-count != 0 && inputs.blame-hang-timeout != ""
+      if: failure() && steps.run-tests.outputs.test-count != 0 && inputs.blame-hang-timeout != ''
       run: Merge-BlameHangDumps -Directory "${{ inputs.build-directory }}"
 
     - name: Upload BlameHangDumps
       uses: actions/upload-artifact@v3.1.1
       # We don't need additional conditions, because of the "if-no-files-found" setting.
-      if: failure() && steps.run-tests.outputs.test-count != 0 && inputs.blame-hang-timeout != ""
+      if: failure() && steps.run-tests.outputs.test-count != 0 && inputs.blame-hang-timeout != ''
       with:
         name: ui-test-blame-hang-dump-${{ steps.setup.outputs.artifact-name-suffix }}
         path: ${{ inputs.build-directory }}/BlameHangDumps/
