Code Styling and changing the API call in PS action of AssignIssueToPullRequestAuthor

--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -28,6 +28,12 @@ jobs:
           JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Assign issue to PR author
+        if: github.event_name == 'pull_request' && github.event.action == 'opened'
+        uses: Lombiq/GitHub-Actions/.github/actions/assign-issue-to-pr-author@dev
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Check for Merge Conflict in PR
         uses: Lombiq/GitHub-Actions/.github/actions/check-merge-conflict@dev
         env:
