Added the add Fixes reference to PR action with the implementing workflow

--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -34,6 +34,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Add Fixes reference to Pull Request
+        if: github.event_name == 'pull_request' && github.event.action == 'opened'
+        uses: Lombiq/GitHub-Actions/.github/actions/add-Fixes-reference-to-pull-request@issue/OSOE-503
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
+
       - name: Check for Merge Conflict in PR
         uses: Lombiq/GitHub-Actions/.github/actions/check-merge-conflict@dev
         env:
