--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -39,6 +39,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Add Fixes reference to Pull Request
+        if: github.event_name == 'pull_request' && github.event.action == 'opened'
+        uses: Lombiq/GitHub-Actions/.github/actions/add-Fixes-reference-to-pull-request@issue/OSOE-503
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Ensure Parent PR Exists
         if: github.event.pull_request != ''
         uses: Lombiq/GitHub-Actions/.github/actions/verify-submodule-pull-request@dev
