--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -35,6 +35,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Add Fixes reference to Pull Request
+        if: github.event_name == 'pull_request'
         uses: Lombiq/GitHub-Actions/.github/actions/add-Fixes-reference-to-pull-request@issue/OSOE-503
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
