--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -27,8 +27,8 @@ jobs:
     timeout-minutes: ${{ inputs.timeout-minutes }}
     steps:
       - name: Add Jira Issue Code to Pull Request
-        if: github.event_name == 'pull_request'
-        uses: Lombiq/GitHub-Actions/.github/actions/add-jira-issue-code-to-pull-request@issue/OSOE-503
+        if: github.event_name == 'pull_request' && github.event.action == 'opened'
+        uses: Lombiq/GitHub-Actions/.github/actions/Add-JiraIssueCodeToPullRequest-and-assign-issue-to-author@issue/OSOE-503
         env:
           JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
