--- a/.github/workflows/spelling-this-repo.yml
+++ b/.github/workflows/spelling-this-repo.yml
@@ -11,4 +11,4 @@ on:
 jobs:
   spelling:
     name: Spelling
-    uses: Lombiq/GitHub-Actions/.github/workflows/spelling.yml@issue/LMBQ-124
+    uses: Lombiq/GitHub-Actions/.github/workflows/spelling.yml@dev
