--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -65,7 +65,7 @@ on:
           The default from Check Spelling is ''.
         required: false
         type: string
-        default: Lombiq/GitHub-Actions@issue/LMBQ-124
+        default: Lombiq/GitHub-Actions@dev
       timeout-minutes:
         required: false
         type: number
@@ -98,7 +98,7 @@ jobs:
 
       - name: Check Spelling
         id: check-spelling-action
-        uses: Lombiq/GitHub-Actions/.github/actions/spelling@issue/LMBQ-124
+        uses: Lombiq/GitHub-Actions/.github/actions/spelling@dev
         with:
           merge-file-excludes: ${{ inputs.merge-file-excludes }}
           merge-forbidden-patterns: ${{ inputs.merge-forbidden-patterns }}
@@ -124,7 +124,7 @@ jobs:
     if: always() && needs.check-spelling.outputs.followup && github.event_name == 'pull_request'
     steps:
       - name: Comment (PR)
-        uses: Lombiq/GitHub-Actions/.github/actions/spelling@issue/LMBQ-124
+        uses: Lombiq/GitHub-Actions/.github/actions/spelling@dev
         with:
           post-comment: 1
           task: ${{ needs.check-spelling.outputs.followup }}
