I'd rather choose windows-2022 instead

--- a/.github/workflows/msbuild-and-test.yml
+++ b/.github/workflows/msbuild-and-test.yml
@@ -20,7 +20,7 @@ on:
         type: string
         default: "windows-2022"
         description: >
-          The machine type to run the workflow under, e.g. "windows-2022" or "windows-2022". Needs to be Windows.
+          The machine type to run the workflow under, e.g. "windows-2022". Needs to be Windows.
       build-directory:
         required: false
         type: string
