Setting the build-directory parameter's default value to src in the deploy-orchard1-to-azure-app-service workflow

--- a/.github/workflows/deploy-orchard1-to-azure-app-service.yml
+++ b/.github/workflows/deploy-orchard1-to-azure-app-service.yml
@@ -32,7 +32,7 @@ on:
       build-directory:
         required: false
         type: string
-        default: .
+        default: src
         description: Path to the directory where a solution file can be found.
       solution-or-project-path:
         required: false
