--- a/.github/workflows/deploy-orchard1-to-azure-app-service.yml
+++ b/.github/workflows/deploy-orchard1-to-azure-app-service.yml
@@ -98,6 +98,11 @@ jobs:
       - name: Enable Node corepack
         uses: Lombiq/GitHub-Actions/.github/actions/enable-corepack@dev
 
+      # Calling nuget restore separately on the actual solution, because we're passing Orchard.proj to the msbuild
+      # action instead to be able to call the Precompiled target.
+      - name: Restore NuGet packages
+        run: nuget restore ${{ inputs.build-directory }}\${{ inputs.solution-or-project-path }}
+
       - name: Publish Precompiled App
         uses: Lombiq/GitHub-Actions/.github/actions/msbuild@dev
         with:
