--- a/.github/workflows/deploy-orchard1-to-azure-app-service.yml
+++ b/.github/workflows/deploy-orchard1-to-azure-app-service.yml
@@ -75,8 +75,9 @@ on:
         type: string
         description: Name of the resource group.
       application-insights-resource-id:
-        required: true
+        required: false
         type: string
+        default: ""
         description: >
           ID of the Application Insights resource that the release annotation for the deployment should be added to.
           This can e.g. be looked up on the Azure Portal under the given AI resource's Overview page -> JSON View.
@@ -141,6 +142,7 @@ jobs:
 
       - name: Add Azure Application Insights Release Annotation
         uses: Lombiq/GitHub-Actions/.github/actions/add-azure-application-insights-release-annotation@dev
+        if: ${{ inputs.application-insights-resource-id != '' }}
         with:
           application-insights-resource-id: ${{ inputs.application-insights-resource-id }}
 
