No secrets in conditions?

--- a/.github/workflows/deploy-orchard1-to-azure-app-service.yml
+++ b/.github/workflows/deploy-orchard1-to-azure-app-service.yml
@@ -182,7 +182,7 @@ jobs:
             -SlotName ${{ inputs.slot-name }}
 
       - name: Start StagingAfterDeploy Maintenance
-        if: inputs.maintenance-host-name != '' && secrets.MAINTENANCE_USER_NAME != '' && secrets.MAINTENANCE_PASSWORD != ''
+        if: inputs.maintenance-host-name != ''
         run: |
           $maintenanceParameters = @{
             HostName = '${{ inputs.maintenance-host-name }}'
