--- a/.github/actions/msbuild/action.yml
+++ b/.github/actions/msbuild/action.yml
@@ -69,6 +69,8 @@ runs:
             TreatWarningsAsErrors = '${{ inputs.treat-warnings-as-errors }}'
             EnableCodeAnalysis = '${{ inputs.enable-code-analysis }}'
             Version = '${{ inputs.publish-version }}'
+            BuildVersionDisplay_BuildText = '#${{ github.sha }} (${{ github.head_ref }})'
+            BuildVersionDisplay_BuildUrl = 'https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}'
             Switches = $givenSwitches
         }
 
