--- a/.github/workflows/reset-azure-environment.yml
+++ b/.github/workflows/reset-azure-environment.yml
@@ -148,6 +148,7 @@ jobs:
             -SlotName ${{ inputs.destination-slot-name }}
 
       - name: Replace Media
+        if: false
         run: |
           Set-AzureWebAppStorageContentFromStorage `
             -ResourceGroupName ${{ inputs.resource-group-name }} `
