--- a/.github/workflows/swap-azure-web-app-slots.yml
+++ b/.github/workflows/swap-azure-web-app-slots.yml
@@ -83,6 +83,7 @@ jobs:
             -DestinationSlotName ${{ inputs.destination-slot-name }}
 
       - name: Add Azure Application Insights Release Annotation
+        if: ${{ inputs.application-insights-resource-id != '' }}
         uses: Lombiq/GitHub-Actions/.github/actions/add-azure-application-insights-release-annotation@dev
         with:
           application-insights-resource-id: ${{ inputs.application-insights-resource-id }}
