--- a/.github/workflows/swap-orchard1-azure-web-app-slots.yml
+++ b/.github/workflows/swap-orchard1-azure-web-app-slots.yml
@@ -44,7 +44,7 @@ on:
         type: string
         description: Name of the resource group.
       application-insights-resource-id:
-        required: true
+        required: false
         type: string
         description: >
           ID of the Application Insights resource that the release annotation for the swap should be added to.
@@ -83,6 +83,7 @@ jobs:
             -DestinationSlotName ${{ inputs.destination-slot-name }}
 
       - name: Add Azure Application Insights Release Annotation
+        if: ${{ inputs.application-insights-resource-id != '' }}
         uses: Lombiq/GitHub-Actions/.github/actions/add-azure-application-insights-release-annotation@dev
         with:
           application-insights-resource-id: ${{ inputs.application-insights-resource-id }}
