The swap-orchard1-azure-web-app-slots workflow now uses our own Swap cmdlet (Switch-AzureWebAppSlot) designed for Orchard 1

--- a/.github/workflows/swap-orchard1-azure-web-app-slots.yml
+++ b/.github/workflows/swap-orchard1-azure-web-app-slots.yml
@@ -76,9 +76,9 @@ jobs:
 
       - name: Swap Web App Slots
         run: |
-          Switch-AzWebAppSlot `
+          Switch-AzureWebAppSlot `
             -ResourceGroupName ${{ inputs.resource-group-name }} `
-            -Name ${{ inputs.app-name }} `
+            -WebAppName ${{ inputs.app-name }} `
             -SourceSlotName ${{ inputs.source-slot-name }} `
             -DestinationSlotName ${{ inputs.destination-slot-name }}
 
